_4.python/__code/Python技術者們-練功！老手帶路教你精通正宗Python程式/中文版範例檔案/Ch04_習題與解答/Ch04_動手試一試.txt
### 4.4 ###

>>> x = 3
>>> y = 3.14
>>> y
3.14
>>> x
3
>>> big var = 12
  File "<stdin>", line 1
    big var = 12
          ^
SyntaxError: invalid syntax
>>> big-var
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'big' is not defined
>>> big&var
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'big' is not defined
>>> x = 2 + 4 * 5 - 6 /3
>>> x
20.0
>>> x = (2 + 4) * 5 - 6 /3
>>> x
28.0

### 4.6 ###

>>> i = 3
>>> f = 3.14
>>> c = 3j2
  File "<stdin>", line 1
    c = 3j2
          ^
SyntaxError: invalid syntax
>>> c = 3J2
  File "<stdin>", line 1
    c = 3J2
          ^
SyntaxError: invalid syntax
>>> c = 3 + 2j
>>> c
(3+2j)
>>> s = 'hello'
>>> s * f
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: can't multiply sequence by non-int of type 'float'
>>> s * i
'hellohellohello'
>>> s * c
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: can't multiply sequence by non-int of type 'complex'
>>> c * i
(9+6j)
>>> c * f
(9.42+6.28j)
>>> from math import sqrt
>>> sqrt(16)
4.0
>>> from cmath import sqrt
>>> sqrt(16)
(4+0j)

---

>>> from math import sqrt
>>> sqrt(4)
2.0

### 4.8 ###

>>> x = input("int?")
int?3
>>> x
'3'
>>> y = float(input("float?")) 
float?3.5
>>> y
3.5
>>> z = int(input("int?"))
int?3.5
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ValueError: invalid literal for int() with base 10: '3.5'

### 4.10 ###

bar()：不好，不合法，包含符號
varName：不好，大小寫混合
VERYLONGVARNAME：不好，過長，全部大寫，很難讀
foobar：好
longvarname：好，不過改成 long_varname 用底線來分隔單字會更好
foo_bar()：好
real_very_long_var_name：過長，但是如果真的需要所有單字，可能也只能這樣取名，也或許可以用來區別相似的變數
